<resources>
    <string name="app_name" translatable="false">TahanApp</string>
    <string name="app_desc" translatable="false">Pain Assessment for Non-Verbal Children with ASD</string>
    <string name="version_format" translatable="false">Version %1$s</string>
    <string name="login" translatable="false">Log In</string>
    <string name="input_username" translatable="false">Username</string>
    <string name="input_password" translatable="false">Password</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="how_to_use">How to Use</string>
    <string name="faq" translatable="false">FAQs</string>
    <string name="about" translatable="false">About</string>
    <string name="asd" translatable="false">ASD</string>
    <string name="asd_full" translatable="false">Autism Spectrum Disorder</string>
    <string name="profiles">Profiles</string>
    <string name="years_old">%1$d years old</string>
    <string name="add_profile">Add Profile</string>
    <string name="input_profile_name_label">Name (Unique)<font color="#FF0000">*</font></string>
    <string name="input_profile_name_hint">Name of the child</string>
    <string name="input_profile_age_label">Age <font color="#FF0000">*</font></string>
    <string name="input_profile_age_hint">Age of the child</string>
    <string name="input_profile_gender_label">Gender <font color="#FF0000">*</font></string>
    <string name="input_profile_gender_hint">Gender of the child</string>
    <string name="input_profile_diagnosis_label" translatable="false">Diagnosis <font color="#FF0000">*</font></string>
    <string name="input_profile_diagnosis_hint">Diagnosis of the child</string>
    <string name="btn_save">Save</string>
    <string name="upload_photo" translatable="false">Upload Photo</string>
    <string name="notice">TahanApp is currently in Alpha testing version, and online backup is currently not available. User credentials will not be uploaded, and all data will remain on the local device.</string>
    <string name="notice_title">Notice</string>
    <string name="username_too_short">Username must be at least 4 characters long</string>
    <string name="username_wrong_format">Username may only contain alphanumeric characters or underscores</string>
    <string name="password_too_short">Password must be at least 8 characters long</string>
    <string name="logged_out_force">You have been logged out. Please log in again.</string>
    <string name="username_not_exists">Username does not exist</string>
    <string name="invalid_password">Invalid password</string>
    <string name="profile_icon" translatable="false">Profile Icon</string>
    <string name="no_profiles">No profiles found.</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="profile_name_empty">Profile name must not be empty</string>
    <string name="invalid_image">Invalid image</string>
    <string name="image_not_scalable">Could not scale image</string>
    <string name="profile_age_outside_range">Profile age must be between 0 and 200</string>
    <string-array name="genders" translatable="false">
        <item>Unspecified / Di Nakatala</item>
        <item>Male / Lalaki</item>
        <item>Female / Babae</item>
        <item>Other / Ibang Kasarian</item>
    </string-array>
    <string name="profile_age_empty">Profile age is required</string>
    <string name="profile_diagnosis_required">Profile diagnosis is required</string>
    <string name="profile_name_exists">A profile with this name already exists</string>
    <string name="profile_add_success">Profile successfully added</string>
    <string name="profile_name_too_long">Profile name must have a maximum of 50 characters</string>
    <string name="asd_desc">Autism Spectrum Disorder (ASD) is a developmental condition that affects a person\'s social interaction, communication, and behavior. Its effects vary from one individual to another, which is why it is referred to as a “spectrum.”</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_1_desc">Requires a small amount of assistance in daily activities.</string>
    <string name="level_2_desc">Requires moderate support in communication and behavior.</string>
    <string name="level_3_desc">Requires intensive support in daily living and social interaction.</string>
    <string name="causes_risk_factors">Causes and Risk Factors</string>
    <string name="causes_risk_factors_desc">
        There is no single cause of ASD, but there are factors that can affect it:\n
        &#8226; Genetic factors or family history of ASD\n
        &#8226; Having certain pregnancy conditions or complications in prenatal development\n
        &#8226; Exposure to certain environmental factors while in the womb.
    </string>
    <string name="faq_rflacc_desc">"The r-FLACC (revised Face, Legs, Activity, Cry, Consolability) is a validated behavioral pain assessment tool designed for nonverbal children, especially children with developmental disabilities such as Autism Spectrum Disorder (ASD).  It assesses five categories of behavior, attitudes, or behaviors. Each is scored from 0-2, for a total possible score of 0-10.     "</string>
    <string name="observations">Observations</string>
    <string name="observations_desc">Write down anything else you have noticed about the child\'s condition.\n\nFor example: behavior, symptoms, etc. (Optional)</string>
    <string name="notes_observations">Notes and Observations</string>
    <string name="enter_observation_here">Enter notes and observations here…</string>
    <string name="observations_examples">
        Examples of What to Write
        \n\n&#160;&#8226;&#160;&#160;What did you notice about the child\'s behavior?
        \n&#160;&#8226;&#160;&#160;Are there any other symptoms? (Fever, vomiting, cough)
        \n&#160;&#8226;&#160;&#160;When did the illness start?
        \n&#160;&#8226;&#160;&#160;Did anything happen before the injury? (Tripping, getting into a collision)
        \n&#160;&#8226;&#160;&#160;What did you do to calm down the child?
    </string>
    <string name="preliminary">Preliminary</string>
    <string name="awake_children">For children who are awake:</string>
    <string name="awake_children_desc">Observe for at least 1-2 minutes. Observe legs and body uncovered. Reposition patient or observe activity, assess body for tenseness and tone. Initiate consoling interventions if needed.</string>
    <string name="asleep_children">For children who are asleep:</string>
    <string name="asleep_children_desc">Observe for at least 2 minutes or longer. Observe legs and body uncovered. If possible, reposition the patient. Touch the body and assess for tenseness and tone.</string>
    <string name="preliminary_end">The revised FLACC can be used for all non-verbal children. The additional descriptors (in italics) are descriptors validated in children with cognitive impairment. The nurse can review with parents/caregivers the descriptors within each category. Ask the parents/caregivers if there are additional behaviours that are better indicators of their child experiencing pain. Add these behaviours to the tool in the appropriate category.</string>
    <string name="language_sysdefault">Use system default</string>
    <string name="language_english">English</string>
    <string name="language_filipino">Filipino</string>
    <string name="learning_hub_module_1">Module 1: What is Autism?</string>
    <string name="lhub_m1_s0_d1">
        Autism is a condition in which a person may behave, think, and feel things in ways that are different from others.
        \n\nPeople with autism may:
        \n&#160;&#8226;&#160;&#160;have difficulty communicating and interacting with other people
        \n&#160;&#8226;&#160;&#160;have difficulty understanding what others are thinking or feeling
        \n&#160;&#8226;&#160;&#160;feel extremely overwhelmed, stressed, or uncomfortable in bright lights or loud sounds
        \n&#160;&#8226;&#160;&#160;feel anxious or upset in new situations or social activities
        \n&#160;&#8226;&#160;&#160;need more time to understand information
        \n&#160;&#8226;&#160;&#160;repeatedly do or think about the same things
    </string>
    <string name="lhub_m1_s1">Autism is Not a Disease</string>
    <string name="lhub_m1_s1_d1">
        Autism is not an illness or a disease. Being autistic does not mean that you are sick; it simply means that your brain works differently from other people\'s.
        \n\nIt is a condition that a person is born with. Signs of autism may be noticed during childhood, or sometimes only recognized later in life.
        \n\nAutism is not a medical condition that has a treatment or \"cure\". However, some autistic individuals may need support to help them in certain aspects of their daily lives.
    </string>
    <string name="lhub_m1_s2">People with Autism Can Live Full and Happy Lives</string>
    <string name="lhub_m1_s2_d1">
        Being autistic is not a barrier to having a meaningful and happy life.
        \n\nLike everyone else, people with autism have things they are good at and things they may find challenging.
        \n\nBeing autistic does not mean you cannot have friends, relationships, or a job. However, youmay need additional support or assistance in these areas.
    </string>
    <string name="lhub_m1_s3">Autism is Different for Every Person</string>
    <string name="lhub_m1_s3_d1">
        Autism is a spectrum, which means that each person with autism has different experiences and abilities.
        \n\nSome autistic individuals need little to no support, while others may require daily assistance from parents or caregivers.
    </string>
    <string name="lhub_m1_s4">Other Terms for Autism</string>
    <string name="lhub_m1_s4_d1">
        Some people use different terms to refer to autism, such as:
        \n&#160;&#8226;&#160;&#160;Autism Spectrum Disorder (ASD) – the medical term used to describe autism.
        \n&#160;&#8226;&#160;&#160;Asperger\'s (or Asperger Syndrome) – a term some people use to describe autistic individuals who have average or above-average levels of intelligence.
    </string>
    <string name="lhub_m1_s5">The Exact Cause of Autism Is Not Yet Fully Known</string>
    <string name="lhub_m1_s5_d1">
        It is not yet certain what truly causes autism, or whether there is a single cause.
        \n\nAutism can sometimes be seen among family members, which suggests that it may, in some cases, be passed down from parents to children.
        \n\nAutism is:
        \n&#160;&#8226;&#160;&#160;not caused by poor upbringing or bad parenting
        \n&#160;&#8226;&#160;&#160;not caused by vaccines, such as the MMR vaccine
        \n&#160;&#8226;&#160;&#160; not linked to food or diet
        \n&#160;&#8226;&#160;&#160;not an infection that can be passed on to other people
    </string>
    <string name="lhub_m1_s6">People with Autism May Have Different Levels of Intelligence</string>
    <string name="lhub_m1_s6_d1">
        Some autistic individuals have average or even above-average intelligence.
        \n\nOthers may have a learning disability. This means they may have difficulty taking care of themselves and may need help with daily activities.
    </string>
    <string name="lhub_m1_s7">People with Autism May Also Have Other Conditions</string>
    <string name="lhub_m1_s7_d1">
        Autistic individuals may also have other conditions, such as:
        \n&#160;&#8226;&#160;&#160;Attention Deficit Hyperactivity Disorder (ADHD)
        \n&#160;&#8226;&#160;&#160;Dyslexia
        \n&#160;&#8226;&#160;&#160;Anxiety
        \n&#160;&#8226;&#160;&#160;Depression
        \n&#160;&#8226;&#160;&#160;Epilepsy
    </string>
</resources>