<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.RFlaccActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/frutiger_bold"
            android:text="@string/preliminary"
            android:textColor="@color/element_font"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frutiger"
            android:text="@string/faq_rflacc_desc"
            android:textColor="@color/darkgray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/frutiger_bold"
            android:text="@string/awake_children"
            android:textColor="@color/element_font"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frutiger"
            android:text="@string/awake_children_desc"
            android:textColor="@color/darkgray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/frutiger_bold"
            android:text="@string/asleep_children"
            android:textColor="@color/element_font"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frutiger"
            android:text="@string/asleep_children_desc"
            android:textColor="@color/darkgray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frutiger"
            android:text="@string/preliminary_end"
            android:textColor="@color/darkgray" />
    </LinearLayout>

</LinearLayout>