<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <RadioButton
            android:id="@+id/systemDefaultRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_sysdefault"
            android:checked="true" />

        <RadioButton
            android:id="@+id/englishRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english" />
        <RadioButton
            android:id="@+id/filipinoRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_filipino" />
    </RadioGroup>
</LinearLayout>