<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activity.AsdActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <include layout="@layout/toolbar_center_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <LinearLayout
                android:id="@+id/asdModule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger_bold"
                    android:textSize="16sp"
                    android:text="@string/learning_hub_module_1"
                    android:textColor="@color/element_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s0_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s1"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s1_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s2"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s2_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s3"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s3_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s4"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s4_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s5"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s5_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s6"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s6_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/frutiger_bold"
                    android:text="@string/lhub_m1_s7"
                    android:textColor="@color/element_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/frutiger"
                    android:text="@string/lhub_m1_s7_d1"
                    android:textColor="@color/darkgray" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>